ived errors and validated file

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
  <p>Vestibulum sollicitudin leo a enim imperdiet, sed vehicula lectus varius. Donec vitae ex et elit efficitur sollicitudin a ac justo. Morbi volutpat enim vitae erat porttitor bibendum. Vestibulum maximus commodo libero, fermentum viverra arcu tincidunt id.</p>
     
     <h2>Some Heading</h2>
+
+    <p>
+    All errors fixed and file Successfully validated.</p>
        
   
 </body>
