Fixed errors and successfully  validated file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Some Heading</h2>
 
     <p>
-    All errors fixed and file Successfully validated.</p>
+    All errors fixed and file Successfully validated. Errors Fixed</p>
        
   
 </body>
